--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.72.5",
     "react-native-navigation": "^7.37.1",
     "react-native-svg": "^13.14.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
