--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^10.5.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-navigation": "^7.37.1",
     "react-native-svg": "^13.14.0",
     "react-native-svg-charts": "^5.4.0",
