--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "react-native": "0.72.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-navigation": "^7.37.1",
-    "react-native-svg": "^7.0.3",
+    "react-native-svg": "^13.14.0",
     "react-native-svg-charts": "^5.4.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "expo-font": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
