--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
     "axios": "^1.6.0",
     "base-64": "^1.0.0",
     "expo": "~49.0.13",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-dotenv": "^3.4.9",
     "react-native-navigation": "^7.37.1",
     "react-native-svg": "^13.14.0",
     "react-native-svg-charts": "^5.4.0",
-    "react-native-vector-icons": "^10.0.0",
-    "expo-font": "~11.4.0"
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
